Either made right OR wrong references, still not functional

--- a/Pizzaria von Dovah/Pizzaria von Dovah.csproj
+++ b/Pizzaria von Dovah/Pizzaria von Dovah.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pizza_Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
